--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
     
 
-<h1 id="biography">Biography</h1>
+<h1 id="about-me">About me</h1>
 
 <p>I am a researcher in the <a href="http://www.tml.cs.uni-tuebingen.de/index.php" target="_blank">Theory of Machine Learning</a> chair at <a href="https://uni-tuebingen.de/en/faculties/faculty-of-science/departments/computer-science/department/head-of-departments-office/" target="_blank">University of Tübingen</a>.
 Since 2018, I head the Network Analysis team of the TML group.
