--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Researcher">
+  <meta name="description" content="Assistant Professor">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -26,7 +26,7 @@
   
   
   
-  <meta name="theme-color" content="#795548">
+  <meta name="theme-color" content="#0095eb">
   
 
   
@@ -87,7 +87,7 @@
   <meta property="og:site_name" content="Debarghya Ghoshdastidar">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Debarghya Ghoshdastidar">
-  <meta property="og:description" content="Researcher">
+  <meta property="og:description" content="Assistant Professor">
   <meta property="og:locale" content="en-us">
   
   
@@ -243,11 +243,11 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/ghoshdastidar-nips-2018/">Practical methods for graph two-sample testing</a></li>
+    <li><a href="/publication/ghoshdastidar-aos-2019/">Two-sample hypothesis testing for inhomogeneous random graphs</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/ghoshdastidar-arxiv-00833/">Two-sample hypothesis testing for inhomogeneous random graphs</a></li>
+    <li><a href="/publication/ghoshdastidar-nips-2018/">Practical methods for graph two-sample testing</a></li>
   </ul>
   
   <ul>
