--- a/404.html
+++ b/404.html
@@ -243,6 +243,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/ghoshdastidar-neurips-2019/">Foundations of comparison-based hierarchical clustering</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/ghoshdastidar-aos-2019/">Two-sample hypothesis testing for inhomogeneous random graphs</a></li>
   </ul>
   
@@ -258,10 +262,6 @@
     <li><a href="/publication/ghoshdastidar-jmlr-2017/">Uniform hypergraph partitioning: Provable tensor methods and sampling techniques</a></li>
   </ul>
   
-  <ul>
-    <li><a href="/publication/haghiri-aistats-2017/">Comparison based nearest neighbor search</a></li>
-  </ul>
-  
   
 
   
@@ -273,6 +273,10 @@
   
   <ul>
     <li><a href="/project/network-clustering/">Clustering Large Evolving Networks</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/project/ordinal/">Machine learning for ordinal data</a></li>
   </ul>
   
   <ul>
