--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ For more information about my research interests, check <a href="/publication">p
 <h3 id="news"><strong>NEWS:</strong></h3>
 
 <ul>
-<li><p>I currently have an opening for a PhD student (<a href="/group#jobs">details</a>)</p></li>
+<li><p>I currently have an opening for a PhD student (<a href="/group/jobs">details</a>)</p></li>
 
 <li><p>Our work on <a href="/publication/ghoshdastidar-neurips-2019/">ordinal data analysis</a> to appear in Neurips 2019</p></li>
 
