--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "2; url = https://www.in.tum.de/tfai" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <p>This website has moved. If you are not redirected automatically, click <a href="https://www.in.tum.de/tfai">here</a></p>
    </body>
 </html>
